--- a/Doggies/Views/Home/Index.cshtml
+++ b/Doggies/Views/Home/Index.cshtml
@@ -1,24 +1,105 @@
-﻿@{
-    Layout = null;
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html ng-app="webApp">
 <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Приложение</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
+    <title>РОСОХОТРЫБОЛОВСОЮЗ</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+    <link href="~/Content/css/style.css" rel="stylesheet">
+    <link href="~/Content/css/bootstrap.css" rel="stylesheet">
+    <script src="~/Scripts/bootstrap.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <base href="/" />
 </head>
-<body class="skin-blue-light layout-top-nav">
-    <div id="web-app" class="wrapper">
-        <div class="content-wrapper">
-            <div id="page" class="container" ng-view></div>
+<body class="body">
+    <div class="">
+        <div class="row" style="background-color: #2c4059">
+            <div class="wrapper container">
+                <div class="col-xs-9">
+                    <h3 class="text-color" style="padding-bottom:10px;">РОСОХОТРЫБОЛОВСОЮЗ</h3>
+                </div>
+                <div class="col-xs-2">
+                    <h5 class="text-color" style="padding-top:20px;padding-left:50px">Личный кабинет</h5>
+                </div>
+                <div class="col-xs-1">
+                    <h5 class="text-color" style="padding-top:20px">Авторизация</h5>
+                </div>
+            </div>
+        </div>
+        
+        <nav class="navbar navbar-default">               
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class="wrapper container">
+                        <ul class="nav navbar-nav">
+                            <li class="main"><a style="color:#ffffff" href="#">Главная</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li class="dropdown nav-li">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">One more separated link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!-- /.navbar-collapse -->
+        </nav>
+    </div>
+
+    <div class="wrapper container">
+        <div class="row">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Показатели -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Обертка для слайдов -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img style="height: 560px; width: 1900px" src="~/Content/src/colorful-animals-looking-at-viewer-photography-dog-looking-up-dust-tongues-paint-splatter-bokeh-Labrador-Retriever-color-puppy-mammal-vertebrate-dog-like-mammal-retriever-207328.jpg" alt="">
+                        <div class="carousel-caption">
+                            собака 1
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img style="height: 560px; width: 1900px" src="~/Content/src/dog_husky_autumn_foliage_lie_face_1021_1920x1080.jpg" alt="...">
+                        <div class="carousel-caption">
+                            собака 2
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img style="height: 560px; width: 1900px" src="~/Content/src/sobaka-v-sharfe.jpg" alt="...">
+                        <div class="carousel-caption">
+                            собака 3
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Элементы управления -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </div>
+    <footer></footer>
     @Scripts.Render("~/bundles/assets")
     @Scripts.Render("~/bundles/applications")
 </body>
