--- a/Doggies/Views/Home/Index.cshtml
+++ b/Doggies/Views/Home/Index.cshtml
@@ -7,11 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Приложение</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <script src='https://www.google.com/recaptcha/api.js'></script>
-    @Styles.Render("~/Content/css")
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <base href="/" />
+    @Styles.Render("~/Content/css") <base href="/" />
 </head>
 <body class="skin-blue-light layout-top-nav">
     <div id="web-app" class="wrapper">
