--- a/Doggies/Views/Home/SPA/App/judge.cshtml
+++ b/Doggies/Views/Home/SPA/App/judge.cshtml
@@ -6,8 +6,7 @@
 	</select>
 
 </div>
-@*<div ng-if="IsEvent()">*@  
-<div ng-if="IsChallenge()">
+<div ng-if="eventType == 1">
 	<table class="table table-bordered">
 		<tr><th>Имя собаки/Оценки</th><th ng-repeat="n in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]">{{n}}</th></tr>
 		<tr ng-repeat="dog in dogs">
@@ -21,7 +20,27 @@
 
 	<input class="btn" type="button" ng-click="CreateCookie()" value="Сохранить" />
 </div>
-@*</div>*@
-<div ng-if="IsExhebition()">
-	<div ng-include="'exhebition.cshtml'"></div>
+
+<div ng-if="UserInRoles('user')"></div>
+
+
+<div ng-show="eventType == 2">
+
+    <select ng-model="selectedDogId" ng-change="getInfoForSelectedDog()" ng-show="isEventSelected()">
+        <option ng-repeat="dog in dogs" value="{{dog.DogId}}">{{dog.DogName}}</option>
+    </select>
+
+    <div ng-if="isDogSelected()">
+        {{selectedDog.DogName}}    -    {{selectedDog.VpkosOrLicenseNumber}}
+        <table>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
 </div>
+
+
