--- a/Doggies/Views/Home/Index.cshtml
+++ b/Doggies/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right ">
                 <li class="active"><a href="#">Главная</a></li>
-                <li><a href="#">Что-нибудь</a></li>
+                <li><a href="/organization">Организации</a></li>
                 <li><a href="/judge">Судьи</a></li>
                 <li><a href="/user">Профиль</a></li>
             </ul>
