--- a/Doggies/Views/Home/SPA/App/user.cshtml
+++ b/Doggies/Views/Home/SPA/App/user.cshtml
@@ -1,27 +1,11 @@
-﻿<form action="/" method="post">
-    <div>
-        <p>Доступные мероприятия</p>
-        <select class="form-control">
-            <option value="value">text</option>@*здесь цикл*@
-        </select>
-        <p>Мои собаки</p>
-        <select class="form-control">
-            <option value="value">text</option>@*здесь цикл*@
-        </select>
-    </div>
-    <div>
-
-    </div>
-    <input class="btn btn-primary form-control" type="submit" name="name" value="отправить заявку" />
-</form>
-
+﻿
 <p>Создание документов</p>
 
 <div>
     Выберете мероприятие:
     <div>
-        <select class="form-control" ng-repeat="event in events" ng-model="forDocument.eventName">
-            <option value="{{event.EventId}}">{{event.EventName}}</option>@*здесь цикл*@
+        <select class="form-control"  ng-model="forDocument.eventName">
+            <option ng-repeat="event in events"  value="{{event.EventId}}">{{event.EventName}}</option>@*здесь цикл*@
         </select>
     </div>
     <div ng-if="IsEvent()">
