подравлен механизм отправки(RequestCtrl) и вид формы(представление) запроса , также реализован механизм забора id текущего пользователя из котроллера cs, а не из js(RequestController)

--- a/Doggies/Views/Home/Index.cshtml
+++ b/Doggies/Views/Home/Index.cshtml
@@ -20,9 +20,15 @@
                 <li><a href="/organization">Организации</a></li>
                 <li><a href="/judge">Судьи</a></li>
                 <li><a href="/user">Профиль</a></li>
+				
             </ul>
         </div>
     </nav>
+
+	<div ng-if="UserInRoles('user')" >
+		<a href="/request">создать заявку</a>
+
+	</div>
     <div id="web-app" class="wrapper">
         <div class="content-wrapper">
             <div id="page" class="container" ng-view></div>
