--- a/Doggies/Views/Home/SPA/App/organization.cshtml
+++ b/Doggies/Views/Home/SPA/App/organization.cshtml
@@ -13,6 +13,13 @@
 <body>
     <div> 
 		hello, I am an organization
+
+		Заявки
+		<table>
+			<tr>
+				<td>Участник</td><td>Собака</td><td></td>
+			</tr>
+		</table>
     </div>
 </body>
 </html>
